Rename supercomputing, add default selection, fix spacing.

--- a/_sass/jekyll-theme-cayman-red.scss
+++ b/_sass/jekyll-theme-cayman-red.scss
@@ -475,7 +475,7 @@ margin-right:20px;
 .main-content-table {
   float: right; 
   width: 83.5%;
-  min-height: 450px;
+  min-height: 468px;
   border-radius: 5px;
   background-color: white;
   max-width: 1215px;
